// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card grammar tokenize list 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "[111]",
        "length": 5,
        "type": "line-mark",
      },
      "
",
      Object {
        "content": "aaa
- bbb
- ccc
",
        "length": 16,
        "type": "list-value",
      },
      Object {
        "content": Array [
          "ddd",
        ],
        "length": 3,
        "type": "line-value",
      },
      "
",
      Object {
        "content": "eee
- fff
- ggg",
        "length": 15,
        "type": "list-value",
      },
    ],
    "length": 41,
    "type": "multiline-marker",
  },
  "

",
  Object {
    "content": Array [
      Object {
        "content": "[222]",
        "length": 5,
        "type": "line-mark",
      },
      "
",
      Object {
        "content": Array [
          "- hhh",
        ],
        "length": 5,
        "type": "line-value",
      },
      "
",
      Object {
        "content": Array [
          "- iii",
        ],
        "length": 5,
        "type": "line-value",
      },
      "
",
      Object {
        "content": "jjj
- kkk",
        "length": 9,
        "type": "list-value",
      },
    ],
    "length": 27,
    "type": "multiline-marker",
  },
]
`;

exports[`Card grammar tokenize vote-choice 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "[111]",
        "length": 5,
        "type": "inline-mark",
      },
      Object {
        "content": Array [
          Object {
            "content": "<AAA>",
            "length": 5,
            "type": "vote-chocie",
          },
          Object {
            "content": "<BBB>",
            "length": 5,
            "type": "vote-chocie",
          },
        ],
        "length": 10,
        "type": "inline-value",
      },
    ],
    "length": 15,
    "type": "inline-marker",
  },
]
`;

exports[`Card grammar tokenize vote-choice 2`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "[111]",
        "length": 5,
        "type": "inline-mark",
      },
      Object {
        "content": Array [
          " ",
          Object {
            "content": "<AAA>",
            "length": 5,
            "type": "vote-chocie",
          },
          " ",
          Object {
            "content": "<BBB>",
            "length": 5,
            "type": "vote-chocie",
          },
        ],
        "length": 12,
        "type": "inline-value",
      },
    ],
    "length": 17,
    "type": "inline-marker",
  },
]
`;

exports[`Card grammar tokenize vote-choice 3`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "[111]",
        "length": 5,
        "type": "inline-mark",
      },
      Object {
        "content": Array [
          " ",
          Object {
            "content": "<AAA>",
            "length": 5,
            "type": "vote-chocie",
          },
          " ",
          Object {
            "content": "<BBB>",
            "length": 5,
            "type": "vote-chocie",
          },
          " CCC",
        ],
        "length": 16,
        "type": "inline-value",
      },
    ],
    "length": 21,
    "type": "inline-marker",
  },
]
`;

exports[`Parser tokenizeSection() 1`] = `
Array [
  Object {
    "root": true,
    "stream": Array [
      Object {
        "content": Array [
          Object {
            "content": "[~]",
            "length": 3,
            "linenumber": 0,
            "marker": Object {
              "key": "[~]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              " aaa",
            ],
            "length": 4,
            "linenumber": 0,
            "marker": Object {
              "key": "[~]",
              "value": "aaa",
            },
            "type": "inline-value",
          },
        ],
        "length": 7,
        "linenumber": 0,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "<買>",
                "length": 3,
                "linenumber": 2,
                "type": "vote-chocie",
              },
              " vs ",
              Object {
                "content": "<賣>",
                "length": 3,
                "linenumber": 2,
                "type": "vote-chocie",
              },
            ],
            "length": 10,
            "linenumber": 2,
            "marker": Object {
              "key": "[?]",
              "value": "<買> vs <賣>",
            },
            "type": "line-value",
          },
        ],
        "length": 14,
        "linenumber": 1,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 3,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 4,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 4,
        "type": "inline-marker",
      },
    ],
  },
]
`;

exports[`Parser tokenizeSection() 2`] = `
Array [
  Object {
    "stream": Array [],
  },
  Object {
    "nestedCard": Object {
      "symbol": "$AAA",
    },
    "stream": Array [
      Object {
        "alias": "sect-ticker",
        "content": Array [
          Object {
            "content": "$AAA",
            "length": 4,
            "linenumber": 0,
            "type": "sect-symbol",
          },
          "
",
        ],
        "length": 5,
        "linenumber": 0,
        "type": "sect-ticker-begin-line",
      },
      Object {
        "content": Array [
          Object {
            "content": "[=]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[=]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 1,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 2,
            "marker": Object {
              "key": "[?]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "- ",
              Object {
                "content": "<買>",
                "length": 3,
                "linenumber": 3,
                "type": "vote-chocie",
              },
              " vs ",
              Object {
                "content": "<賣>",
                "length": 3,
                "linenumber": 3,
                "type": "vote-chocie",
              },
            ],
            "length": 12,
            "linenumber": 3,
            "marker": Object {
              "key": "[?]",
              "value": "- <買> vs <賣>",
            },
            "type": "line-value",
          },
        ],
        "length": 16,
        "linenumber": 2,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 4,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 4,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 5,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 5,
        "type": "inline-marker",
      },
      "
",
    ],
    "ticker": true,
  },
  Object {
    "nestedCard": Object {
      "symbol": "[[TOPIC]]",
    },
    "stream": Array [
      Object {
        "alias": "sect-topic",
        "content": Array [
          Object {
            "content": "
[[TOPIC]]",
            "length": 10,
            "linenumber": 6,
            "type": "sect-symbol",
          },
        ],
        "length": 10,
        "linenumber": 6,
        "type": "sect-topic",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[=]",
            "length": 3,
            "linenumber": 8,
            "marker": Object {
              "key": "[=]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 8,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 9,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              "買 vs 賣？",
            ],
            "length": 7,
            "linenumber": 9,
            "marker": Object {
              "key": "[?]",
              "value": "買 vs 賣？",
            },
            "type": "inline-value",
          },
        ],
        "length": 10,
        "linenumber": 9,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 10,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 10,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 11,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 11,
        "type": "inline-marker",
      },
      "
",
    ],
    "topic": true,
  },
  Object {
    "nestedCard": Object {
      "symbol": "$BBB",
    },
    "stream": Array [
      Object {
        "alias": "sect-ticker",
        "content": Array [
          "
",
          Object {
            "content": "$BBB",
            "length": 4,
            "linenumber": 13,
            "type": "sect-symbol",
          },
        ],
        "length": 5,
        "linenumber": 12,
        "type": "sect-ticker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[=]",
            "length": 3,
            "linenumber": 14,
            "marker": Object {
              "key": "[=]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 14,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 15,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              "買 vs 賣？",
            ],
            "length": 7,
            "linenumber": 15,
            "marker": Object {
              "key": "[?]",
              "value": "買 vs 賣？",
            },
            "type": "inline-value",
          },
        ],
        "length": 10,
        "linenumber": 15,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 16,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 16,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 17,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 17,
        "type": "inline-marker",
      },
    ],
    "ticker": true,
  },
]
`;

exports[`Parser tokenizeSection() 3`] = `
Array [
  Object {
    "stream": Array [],
  },
  Object {
    "nestedCard": Object {
      "symbol": "$IPOE",
    },
    "stream": Array [
      Object {
        "alias": "sect-ticker",
        "content": Array [
          Object {
            "content": "$IPOE",
            "length": 5,
            "linenumber": 0,
            "type": "sect-symbol",
          },
          "
",
        ],
        "length": 6,
        "linenumber": 0,
        "type": "sect-ticker-begin-line",
      },
      Object {
        "content": Array [
          Object {
            "content": "[*]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[*]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[SPAC]]",
                "length": 8,
                "linenumber": 2,
                "type": "topic",
              },
            ],
            "length": 8,
            "linenumber": 2,
            "marker": Object {
              "key": "[*]",
              "value": "[[SPAC]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "預計合併對象：",
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 3,
                "type": "topic",
              },
              "，合併日未定",
            ],
            "length": 21,
            "linenumber": 3,
            "marker": Object {
              "key": "[*]",
              "value": "預計合併對象：[[SoFi]]，合併日未定",
            },
            "type": "line-value",
          },
        ],
        "length": 34,
        "linenumber": 1,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 4,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              Object {
                "content": "<買>",
                "length": 3,
                "linenumber": 4,
                "type": "vote-chocie",
              },
              " 看好",
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 4,
                "type": "topic",
              },
              "，但對投資",
              Object {
                "content": "$IPOE",
                "length": 5,
                "linenumber": 4,
                "type": "ticker",
              },
              "仍要小心合併失敗風險",
            ],
            "length": 34,
            "linenumber": 4,
            "marker": Object {
              "key": "[?]",
              "value": "<買> 看好[[SoFi]]，但對投資$IPOE仍要小心合併失敗風險",
            },
            "type": "inline-value",
          },
        ],
        "length": 37,
        "linenumber": 4,
        "type": "inline-marker",
      },
      "
",
    ],
    "ticker": true,
  },
  Object {
    "nestedCard": Object {
      "symbol": "[[SoFi]]",
    },
    "stream": Array [
      Object {
        "alias": "sect-topic",
        "content": Array [
          Object {
            "content": "
[[SoFi]]",
            "length": 9,
            "linenumber": 5,
            "type": "sect-symbol",
          },
        ],
        "length": 9,
        "linenumber": 5,
        "type": "sect-topic",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[*]",
            "length": 3,
            "linenumber": 7,
            "marker": Object {
              "key": "[*]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[Social Finance]]",
                "length": 18,
                "linenumber": 8,
                "type": "topic",
              },
            ],
            "length": 18,
            "linenumber": 8,
            "marker": Object {
              "key": "[*]",
              "value": "[[Social Finance]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "2011創立，資金來源是史丹佛校友提供",
            ],
            "length": 19,
            "linenumber": 9,
            "marker": Object {
              "key": "[*]",
              "value": "2011創立，資金來源是史丹佛校友提供",
            },
            "type": "line-value",
          },
        ],
        "length": 42,
        "linenumber": 7,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[業務]",
            "length": 4,
            "linenumber": 10,
            "marker": Object {
              "key": "[業務]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "本來的業務是線上",
              Object {
                "content": "[[學生貸款]]",
                "length": 8,
                "linenumber": 11,
                "type": "topic",
              },
              Object {
                "content": "[[轉貸]]",
                "length": 6,
                "linenumber": 11,
                "type": "topic",
              },
              "：以較市場低的利率放貸給史丹佛的學生(",
              Object {
                "content": "[[P2P]]",
                "length": 7,
                "linenumber": 11,
                "type": "topic",
              },
              "的",
              Object {
                "content": "[[貸款]]",
                "length": 6,
                "linenumber": 11,
                "type": "topic",
              },
              "業務)",
            ],
            "length": 58,
            "linenumber": 11,
            "marker": Object {
              "key": "[業務]",
              "value": "本來的業務是線上[[學生貸款]][[轉貸]]：以較市場低的利率放貸給史丹佛的學生([[P2P]]的[[貸款]]業務)",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "衍伸業務涵蓋一般商銀的",
              Object {
                "content": "[[個人金融業務]]",
                "length": 10,
                "linenumber": 12,
                "type": "topic",
              },
            ],
            "length": 21,
            "linenumber": 12,
            "marker": Object {
              "key": "[業務]",
              "value": "衍伸業務涵蓋一般商銀的[[個人金融業務]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "居於中間人：連接銀行、清算公司和終端消費者，以收取交易服務費",
            ],
            "length": 30,
            "linenumber": 13,
            "marker": Object {
              "key": "[業務]",
              "value": "居於中間人：連接銀行、清算公司和終端消費者，以收取交易服務費",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "提供金融相關的基礎建設給其他",
              Object {
                "content": "[[fintech]]",
                "length": 11,
                "linenumber": 14,
                "type": "topic",
              },
              "公司",
            ],
            "length": 27,
            "linenumber": 14,
            "marker": Object {
              "key": "[業務]",
              "value": "提供金融相關的基礎建設給其他[[fintech]]公司",
            },
            "type": "line-value",
          },
        ],
        "length": 144,
        "linenumber": 10,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[最新]",
            "length": 4,
            "linenumber": 15,
            "marker": Object {
              "key": "[最新]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "2021/3宣布併購區域性銀行",
            ],
            "length": 15,
            "linenumber": 16,
            "marker": Object {
              "key": "[最新]",
              "value": "2021/3宣布併購區域性銀行",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "預計與",
              Object {
                "content": "[[SPAC]]",
                "length": 8,
                "linenumber": 17,
                "type": "topic",
              },
              Object {
                "content": "$IPOE",
                "length": 5,
                "linenumber": 17,
                "type": "ticker",
              },
              "合併上市，合併日未定",
            ],
            "length": 26,
            "linenumber": 17,
            "marker": Object {
              "key": "[最新]",
              "value": "預計與[[SPAC]]$IPOE合併上市，合併日未定",
            },
            "type": "line-value",
          },
        ],
        "length": 47,
        "linenumber": 15,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 18,
            "marker": Object {
              "key": "[+]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "和其他",
              Object {
                "content": "[[金融科技]]",
                "length": 8,
                "linenumber": 19,
                "type": "topic",
              },
              "公司相比，產品線完整許多",
            ],
            "length": 23,
            "linenumber": 19,
            "marker": Object {
              "key": "[+]",
              "value": "和其他[[金融科技]]公司相比，產品線完整許多",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "併購區域性銀行後，加速銀行牌照申請 -> 瓜分銀行本體業務(金融服務) -> 可直接賺取存貸利差 -> 幫助獲利成長",
            ],
            "length": 58,
            "linenumber": 20,
            "marker": Object {
              "key": "[+]",
              "value": "併購區域性銀行後，加速銀行牌照申請 -> 瓜分銀行本體業務(金融服務) -> 可直接賺取存貸利差 -> 幫助獲利成長",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "會員人數維持高度增長",
            ],
            "length": 10,
            "linenumber": 21,
            "marker": Object {
              "key": "[+]",
              "value": "會員人數維持高度增長",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "大環境的[數位錢包]]趨勢快速成長",
            ],
            "length": 17,
            "linenumber": 22,
            "marker": Object {
              "key": "[+]",
              "value": "大環境的[數位錢包]]趨勢快速成長",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "一站式服務 -> 會員黏著度高 -> 有效提高會員單位營收貢獻",
            ],
            "length": 31,
            "linenumber": 23,
            "marker": Object {
              "key": "[+]",
              "value": "一站式服務 -> 會員黏著度高 -> 有效提高會員單位營收貢獻",
            },
            "type": "line-value",
          },
        ],
        "length": 147,
        "linenumber": 18,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 24,
            "marker": Object {
              "key": "[-]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "超過80%營收來自",
              Object {
                "content": "[[貸款]]",
                "length": 6,
                "linenumber": 25,
                "type": "topic",
              },
              "相關業務，但美國持續處低",
              Object {
                "content": "[[利率]]",
                "length": 6,
                "linenumber": 25,
                "type": "topic",
              },
            ],
            "length": 33,
            "linenumber": 25,
            "marker": Object {
              "key": "[-]",
              "value": "超過80%營收來自[[貸款]]相關業務，但美國持續處低[[利率]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 26,
                "type": "topic",
              },
              "宣稱2021會員可帶來交叉銷售，提高",
              Object {
                "content": "[[金融服務]]",
                "length": 8,
                "linenumber": 26,
                "type": "topic",
              },
              "和",
              Object {
                "content": "[[金融基礎建設]]",
                "length": 10,
                "linenumber": 26,
                "type": "topic",
              },
              "的收入比重",
            ],
            "length": 50,
            "linenumber": 26,
            "marker": Object {
              "key": "[-]",
              "value": "[[SoFi]]宣稱2021會員可帶來交叉銷售，提高[[金融服務]]和[[金融基礎建設]]的收入比重",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "競爭激烈",
            ],
            "length": 4,
            "linenumber": 27,
            "marker": Object {
              "key": "[-]",
              "value": "競爭激烈",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "$PYPL",
                "length": 5,
                "linenumber": 28,
                "type": "ticker",
              },
              ", ",
              Object {
                "content": "$SQ",
                "length": 3,
                "linenumber": 28,
                "type": "ticker",
              },
              "為市場領導者",
            ],
            "length": 16,
            "linenumber": 28,
            "marker": Object {
              "key": "[-]",
              "value": "$PYPL, $SQ為市場領導者",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "投資平台",
              Object {
                "content": "[[robin hood]]",
                "length": 14,
                "linenumber": 29,
                "type": "topic",
              },
              "、",
              Object {
                "content": "[[eToro]]",
                "length": 9,
                "linenumber": 29,
                "type": "topic",
              },
              "最近也要上市",
            ],
            "length": 34,
            "linenumber": 29,
            "marker": Object {
              "key": "[-]",
              "value": "投資平台[[robin hood]]、[[eToro]]最近也要上市",
            },
            "type": "line-value",
          },
        ],
        "length": 145,
        "linenumber": 24,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 30,
            "marker": Object {
              "key": "[?]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 31,
                "type": "topic",
              },
              "是否能靠以貸款為基礎的生態圈突破重圍?",
            ],
            "length": 27,
            "linenumber": 31,
            "marker": Object {
              "key": "[?]",
              "value": "[[SoFi]]是否能靠以貸款為基礎的生態圈突破重圍?",
            },
            "type": "line-value",
          },
        ],
        "length": 31,
        "linenumber": 30,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[vs]",
            "length": 4,
            "linenumber": 32,
            "marker": Object {
              "key": "[vs]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[Cash App]]",
                "length": 12,
                "linenumber": 33,
                "type": "topic",
              },
              "、",
              Object {
                "content": "[[Venmo]]",
                "length": 9,
                "linenumber": 33,
                "type": "topic",
              },
            ],
            "length": 22,
            "linenumber": 33,
            "marker": Object {
              "key": "[vs]",
              "value": "[[Cash App]]、[[Venmo]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 34,
                "type": "topic",
              },
              "商業模式聚焦在提供個人",
              Object {
                "content": "[[金融服務]]",
                "length": 8,
                "linenumber": 34,
                "type": "topic",
              },
              "的封閉圈{{以會員為中心，完整的金融商品如：房貸、信貸、車貸、信用卡、存款、投資}}",
            ],
            "length": 69,
            "linenumber": 34,
            "marker": Object {
              "key": "[vs]",
              "value": "[[SoFi]]商業模式聚焦在提供個人[[金融服務]]的封閉圈{{以會員為中心，完整的金融商品如：房貸、信貸、車貸、信用卡、存款、投資}}",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "$SQ",
                "length": 3,
                "linenumber": 35,
                "type": "ticker",
              },
            ],
            "length": 3,
            "linenumber": 35,
            "marker": Object {
              "key": "[vs]",
              "value": "$SQ",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 36,
                "type": "topic",
              },
              "和",
              Object {
                "content": "$SQ",
                "length": 3,
                "linenumber": 36,
                "type": "ticker",
              },
              "的商業模式相像，都以創造封閉式生態提高會員黏著度，也都朝",
              Object {
                "content": "[[數位銀行]]",
                "length": 8,
                "linenumber": 36,
                "type": "topic",
              },
              "發展",
            ],
            "length": 50,
            "linenumber": 36,
            "marker": Object {
              "key": "[vs]",
              "value": "[[SoFi]]和$SQ的商業模式相像，都以創造封閉式生態提高會員黏著度，也都朝[[數位銀行]]發展",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "目標市場有些許差別：",
              Object {
                "content": "$SQ",
                "length": 3,
                "linenumber": 37,
                "type": "ticker",
              },
              "以小企業金融服務為主 vs ",
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 37,
                "type": "topic",
              },
              "以個人金融服務為主",
            ],
            "length": 44,
            "linenumber": 37,
            "marker": Object {
              "key": "[vs]",
              "value": "目標市場有些許差別：$SQ以小企業金融服務為主 vs [[SoFi]]以個人金融服務為主",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "規模：",
              Object {
                "content": "$SQ",
                "length": 3,
                "linenumber": 38,
                "type": "ticker",
              },
              "會員人數6,000萬人 vs ",
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 38,
                "type": "topic",
              },
              "180萬",
            ],
            "length": 33,
            "linenumber": 38,
            "marker": Object {
              "key": "[vs]",
              "value": "規模：$SQ會員人數6,000萬人 vs [[SoFi]]180萬",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "管理層：",
              Object {
                "content": "$SQ",
                "length": 3,
                "linenumber": 39,
                "type": "ticker",
              },
              "的Jack Dorsey (",
              Object {
                "content": "$TWTR",
                "length": 5,
                "linenumber": 39,
                "type": "ticker",
              },
              "的CEO) vs ",
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 39,
                "type": "topic",
              },
              "的Anthony Noto (",
              Object {
                "content": "$TWTR",
                "length": 5,
                "linenumber": 39,
                "type": "ticker",
              },
              "的前COO)",
            ],
            "length": 69,
            "linenumber": 39,
            "marker": Object {
              "key": "[vs]",
              "value": "管理層：$SQ的Jack Dorsey ($TWTR的CEO) vs [[SoFi]]的Anthony Noto ($TWTR的前COO)",
            },
            "type": "line-value",
          },
        ],
        "length": 301,
        "linenumber": 32,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 40,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              " ",
              Object {
                "content": "<多>",
                "length": 3,
                "linenumber": 40,
                "type": "vote-chocie",
              },
              " ",
              Object {
                "content": "[[SoFi]]",
                "length": 8,
                "linenumber": 40,
                "type": "topic",
              },
              "但對投資",
              Object {
                "content": "$IPOE",
                "length": 5,
                "linenumber": 40,
                "type": "ticker",
              },
              "仍要小心合併失敗風險",
            ],
            "length": 32,
            "linenumber": 40,
            "marker": Object {
              "key": "[?]",
              "value": "<多> [[SoFi]]但對投資$IPOE仍要小心合併失敗風險",
            },
            "type": "inline-value",
          },
        ],
        "length": 35,
        "linenumber": 40,
        "type": "inline-marker",
      },
    ],
    "topic": true,
  },
]
`;

exports[`Parser tokenizeSection() 4`] = `
Array [
  Object {
    "stream": Array [],
  },
  Object {
    "nestedCard": Object {
      "symbol": "$BTC",
    },
    "stream": Array [
      Object {
        "alias": "sect-ticker",
        "content": Array [
          Object {
            "content": "$BTC",
            "length": 4,
            "linenumber": 0,
            "type": "sect-symbol",
          },
          "
",
        ],
        "length": 5,
        "linenumber": 0,
        "type": "sect-ticker-begin-line",
      },
      Object {
        "content": Array [
          Object {
            "content": "[最新]",
            "length": 4,
            "linenumber": 1,
            "marker": Object {
              "key": "[最新]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "[[",
              Object {
                "content": "$TSLA",
                "length": 5,
                "linenumber": 2,
                "type": "ticker",
              },
              "購入15億美元比特幣]] -> 當日",
              Object {
                "content": "$TSLA",
                "length": 5,
                "linenumber": 2,
                "type": "ticker",
              },
              "股價爆漲20%",
            ],
            "length": 37,
            "linenumber": 2,
            "marker": Object {
              "key": "[最新]",
              "value": "[[$TSLA購入15億美元比特幣]] -> 當日$TSLA股價爆漲20%",
            },
            "type": "line-value",
          },
        ],
        "length": 42,
        "linenumber": 1,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[*]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[*]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "無基本面 -> 無法估值",
            ],
            "length": 12,
            "linenumber": 4,
            "marker": Object {
              "key": "[*]",
              "value": "無基本面 -> 無法估值",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "非官方發行，應用",
              Object {
                "content": "[[區塊鍊]]",
                "length": 7,
                "linenumber": 5,
                "type": "topic",
              },
              "技術的",
              Object {
                "content": "[[數字貨幣]]",
                "length": 8,
                "linenumber": 5,
                "type": "topic",
              },
            ],
            "length": 26,
            "linenumber": 5,
            "marker": Object {
              "key": "[*]",
              "value": "非官方發行，應用[[區塊鍊]]技術的[[數字貨幣]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "不可篡改、不可偽造",
            ],
            "length": 9,
            "linenumber": 6,
            "marker": Object {
              "key": "[*]",
              "value": "不可篡改、不可偽造",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "沒有人可控制",
              Object {
                "content": "[[比特幣]]",
                "length": 7,
                "linenumber": 7,
                "type": "topic",
              },
              "的發行量和流通量",
            ],
            "length": 21,
            "linenumber": 7,
            "marker": Object {
              "key": "[*]",
              "value": "沒有人可控制[[比特幣]]的發行量和流通量",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "發行數量固定為2,100萬個單位",
            ],
            "length": 16,
            "linenumber": 8,
            "marker": Object {
              "key": "[*]",
              "value": "發行數量固定為2,100萬個單位",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "存在數量可能下降",
            ],
            "length": 8,
            "linenumber": 9,
            "marker": Object {
              "key": "[*]",
              "value": "存在數量可能下降",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "* 20%因忘記密碼而消失",
            ],
            "length": 13,
            "linenumber": 10,
            "marker": Object {
              "key": "[*]",
              "value": "* 20%因忘記密碼而消失",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "* 預計2-4%逐年消失 -> 具天然",
              Object {
                "content": "[[通縮]]",
                "length": 6,
                "linenumber": 11,
                "type": "topic",
              },
              "性質",
            ],
            "length": 27,
            "linenumber": 11,
            "marker": Object {
              "key": "[*]",
              "value": "* 預計2-4%逐年消失 -> 具天然[[通縮]]性質",
            },
            "type": "line-value",
          },
        ],
        "length": 143,
        "linenumber": 3,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 12,
            "marker": Object {
              "key": "[+]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "$PYPL",
                "length": 5,
                "linenumber": 13,
                "type": "ticker",
              },
              ", ",
              Object {
                "content": "$SQ",
                "length": 3,
                "linenumber": 13,
                "type": "ticker",
              },
              ", ",
              Object {
                "content": "$MA",
                "length": 3,
                "linenumber": 13,
                "type": "ticker",
              },
              " 陸續開通",
              Object {
                "content": "[[加密貨幣]]",
                "length": 8,
                "linenumber": 13,
                "type": "topic",
              },
              "支付功能",
            ],
            "length": 32,
            "linenumber": 13,
            "marker": Object {
              "key": "[+]",
              "value": "$PYPL, $SQ, $MA 陸續開通[[加密貨幣]]支付功能",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[Cathie Wood]]",
                "length": 15,
                "linenumber": 14,
                "type": "topic",
              },
              " 認為",
              Object {
                "content": "[[比特幣]]",
                "length": 7,
                "linenumber": 14,
                "type": "topic",
              },
              "可達$50萬一幣",
            ],
            "length": 33,
            "linenumber": 14,
            "marker": Object {
              "key": "[+]",
              "value": "[[Cathie Wood]] 認為[[比特幣]]可達$50萬一幣",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[避險]]",
                "length": 6,
                "linenumber": 15,
                "type": "topic",
              },
              "性質優於傳統避險產品(",
              Object {
                "content": "[[黃金]]",
                "length": 6,
                "linenumber": 15,
                "type": "topic",
              },
              "、藝術品、",
              Object {
                "content": "[[房地產]]",
                "length": 7,
                "linenumber": 15,
                "type": "topic",
              },
              ")",
            ],
            "length": 36,
            "linenumber": 15,
            "marker": Object {
              "key": "[+]",
              "value": "[[避險]]性質優於傳統避險產品([[黃金]]、藝術品、[[房地產]])",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "* 流通性強",
            ],
            "length": 6,
            "linenumber": 16,
            "marker": Object {
              "key": "[+]",
              "value": "* 流通性強",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "* 轉帳交易便利",
            ],
            "length": 8,
            "linenumber": 17,
            "marker": Object {
              "key": "[+]",
              "value": "* 轉帳交易便利",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "近十年的接受度增加",
            ],
            "length": 9,
            "linenumber": 18,
            "marker": Object {
              "key": "[+]",
              "value": "近十年的接受度增加",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "部分發展中國家考慮將",
              Object {
                "content": "[[比特幣]]",
                "length": 7,
                "linenumber": 19,
                "type": "topic",
              },
              "加入",
              Object {
                "content": "[[外匯儲備]]",
                "length": 8,
                "linenumber": 19,
                "type": "topic",
              },
            ],
            "length": 27,
            "linenumber": 19,
            "marker": Object {
              "key": "[+]",
              "value": "部分發展中國家考慮將[[比特幣]]加入[[外匯儲備]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "比",
              Object {
                "content": "[[主權貨幣]]",
                "length": 8,
                "linenumber": 20,
                "type": "topic",
              },
              "更安全及更方便流通",
            ],
            "length": 18,
            "linenumber": 20,
            "marker": Object {
              "key": "[+]",
              "value": "比[[主權貨幣]]更安全及更方便流通",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[機構投資者]]",
                "length": 9,
                "linenumber": 21,
                "type": "topic",
              },
              "陸續引入 <- 機構比散戶更需要避險",
            ],
            "length": 27,
            "linenumber": 21,
            "marker": Object {
              "key": "[+]",
              "value": "[[機構投資者]]陸續引入 <- 機構比散戶更需要避險",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "生活中應用的可能性增加",
            ],
            "length": 11,
            "linenumber": 22,
            "marker": Object {
              "key": "[+]",
              "value": "生活中應用的可能性增加",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "被視為電子黃金 <- 2021年市場最大風險是",
              Object {
                "content": "[[通貨膨脹]]",
                "length": 8,
                "linenumber": 23,
                "type": "topic",
              },
              "，疫情下各主要經濟體的",
              Object {
                "content": "[[央行]]",
                "length": 6,
                "linenumber": 23,
                "type": "topic",
              },
              "放水，長期",
              Object {
                "content": "[[實質利率]]",
                "length": 8,
                "linenumber": 23,
                "type": "topic",
              },
              "、",
              Object {
                "content": "[[債券收益率]]",
                "length": 9,
                "linenumber": 23,
                "type": "topic",
              },
              "低 -> 主權貨幣",
              Object {
                "content": "[[貶值]]",
                "length": 6,
                "linenumber": 23,
                "type": "topic",
              },
              "風險，投資人尋找投資替代品",
            ],
            "length": 99,
            "linenumber": 23,
            "marker": Object {
              "key": "[+]",
              "value": "被視為電子黃金 <- 2021年市場最大風險是[[通貨膨脹]]，疫情下各主要經濟體的[[央行]]放水，長期[[實質利率]]、[[債券收益率]]低 -> 主權貨幣[[貶值]]風險，投資人尋找投資替代品",
            },
            "type": "line-value",
          },
        ],
        "length": 320,
        "linenumber": 12,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 24,
            "marker": Object {
              "key": "[-]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[散戶]]",
                "length": 6,
                "linenumber": 25,
                "type": "topic",
              },
              "占大多數(機構占比小於1%)，價格受投資者情緒波動 -> 散戶過多容易出現價格背離價值",
            ],
            "length": 49,
            "linenumber": 25,
            "marker": Object {
              "key": "[-]",
              "value": "[[散戶]]占大多數(機構占比小於1%)，價格受投資者情緒波動 -> 散戶過多容易出現價格背離價值",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "漲幅大但行業發展速度慢",
            ],
            "length": 11,
            "linenumber": 26,
            "marker": Object {
              "key": "[-]",
              "value": "漲幅大但行業發展速度慢",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[區塊鍊]]",
                "length": 7,
                "linenumber": 27,
                "type": "topic",
              },
              "行業門檻高、用戶數量少",
            ],
            "length": 18,
            "linenumber": 27,
            "marker": Object {
              "key": "[-]",
              "value": "[[區塊鍊]]行業門檻高、用戶數量少",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "提供",
              Object {
                "content": "[[數字貨幣]]",
                "length": 8,
                "linenumber": 28,
                "type": "topic",
              },
              "交易服務的公司並未賺錢",
            ],
            "length": 21,
            "linenumber": 28,
            "marker": Object {
              "key": "[-]",
              "value": "提供[[數字貨幣]]交易服務的公司並未賺錢",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "缺少配套措施",
            ],
            "length": 6,
            "linenumber": 29,
            "marker": Object {
              "key": "[-]",
              "value": "缺少配套措施",
            },
            "type": "line-value",
          },
        ],
        "length": 113,
        "linenumber": 24,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[未來發展]",
            "length": 6,
            "linenumber": 30,
            "marker": Object {
              "key": "[未來發展]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "長期價值高但過程慢",
            ],
            "length": 9,
            "linenumber": 31,
            "marker": Object {
              "key": "[未來發展]",
              "value": "長期價值高但過程慢",
            },
            "type": "line-value",
          },
        ],
        "length": 16,
        "linenumber": 30,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 32,
            "marker": Object {
              "key": "[?]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "保密性和交易流通性值得懷疑(保密性衝擊各國監管系統，可能無法大量流通)",
            ],
            "length": 35,
            "linenumber": 33,
            "marker": Object {
              "key": "[?]",
              "value": "保密性和交易流通性值得懷疑(保密性衝擊各國監管系統，可能無法大量流通)",
            },
            "type": "line-value",
          },
        ],
        "length": 39,
        "linenumber": 32,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 34,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              Object {
                "content": "<買>",
                "length": 3,
                "linenumber": 34,
                "type": "vote-chocie",
              },
              " 少量買入，做好短期回調的準備，看好長期",
            ],
            "length": 23,
            "linenumber": 34,
            "marker": Object {
              "key": "[?]",
              "value": "<買> 少量買入，做好短期回調的準備，看好長期",
            },
            "type": "inline-value",
          },
        ],
        "length": 26,
        "linenumber": 34,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[如何投資]",
            "length": 6,
            "linenumber": 35,
            "marker": Object {
              "key": "[如何投資]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "直接購買比特幣",
            ],
            "length": 7,
            "linenumber": 36,
            "marker": Object {
              "key": "[如何投資]",
              "value": "直接購買比特幣",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "* 券商：",
              Object {
                "content": "[[Roinhood]]",
                "length": 12,
                "linenumber": 37,
                "type": "topic",
              },
            ],
            "length": 17,
            "linenumber": 37,
            "marker": Object {
              "key": "[如何投資]",
              "value": "* 券商：[[Roinhood]]",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "* 支付平台：",
              Object {
                "content": "$PYPL",
                "length": 5,
                "linenumber": 38,
                "type": "ticker",
              },
            ],
            "length": 12,
            "linenumber": 38,
            "marker": Object {
              "key": "[如何投資]",
              "value": "* 支付平台：$PYPL",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "* 專業數字貨幣平台：",
              Object {
                "content": "$COIN",
                "length": 5,
                "linenumber": 39,
                "type": "ticker",
              },
            ],
            "length": 16,
            "linenumber": 39,
            "marker": Object {
              "key": "[如何投資]",
              "value": "* 專業數字貨幣平台：$COIN",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "投資",
              Object {
                "content": "[[信託基金]]",
                "length": 8,
                "linenumber": 40,
                "type": "topic",
              },
              Object {
                "content": "$GBTC",
                "length": 5,
                "linenumber": 40,
                "type": "ticker",
              },
              " (",
              Object {
                "content": "$GBTC",
                "length": 5,
                "linenumber": 40,
                "type": "ticker",
              },
              "是唯一合法跟蹤",
              Object {
                "content": "[[比特幣]]",
                "length": 7,
                "linenumber": 40,
                "type": "topic",
              },
              "的被動投資機構，存在議價風險)",
            ],
            "length": 51,
            "linenumber": 40,
            "marker": Object {
              "key": "[如何投資]",
              "value": "投資[[信託基金]]$GBTC ($GBTC是唯一合法跟蹤[[比特幣]]的被動投資機構，存在議價風險)",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "投資持有",
              Object {
                "content": "[[比特幣]]",
                "length": 7,
                "linenumber": 41,
                "type": "topic",
              },
              "的公司",
            ],
            "length": 14,
            "linenumber": 41,
            "marker": Object {
              "key": "[如何投資]",
              "value": "投資持有[[比特幣]]的公司",
            },
            "type": "line-value",
          },
        ],
        "length": 129,
        "linenumber": 35,
        "type": "multiline-marker",
      },
    ],
    "ticker": true,
  },
]
`;

exports[`Parser tokenizeSection() 5`] = `
Array [
  Object {
    "stream": Array [],
  },
  Object {
    "nestedCard": Object {
      "symbol": "$NQ",
    },
    "stream": Array [
      Object {
        "alias": "sect-ticker",
        "content": Array [
          Object {
            "content": "$NQ",
            "length": 3,
            "linenumber": 0,
            "type": "sect-symbol",
          },
          "=F
",
        ],
        "length": 6,
        "linenumber": 0,
        "type": "sect-ticker-begin-line",
      },
      Object {
        "content": Array [
          Object {
            "content": "[最新]",
            "length": 4,
            "linenumber": 1,
            "marker": Object {
              "key": "[最新]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "華爾街投行皆看空未來走勢",
            ],
            "length": 12,
            "linenumber": 2,
            "marker": Object {
              "key": "[最新]",
              "value": "華爾街投行皆看空未來走勢",
            },
            "type": "line-value",
          },
        ],
        "length": 17,
        "linenumber": 1,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              Object {
                "content": "<買>",
                "length": 3,
                "linenumber": 3,
                "type": "vote-chocie",
              },
              " 已大跌兩個月的科技成長股跌勢會暫時停止，可進場抄底搶反彈",
            ],
            "length": 32,
            "linenumber": 3,
            "marker": Object {
              "key": "[?]",
              "value": "<買> 已大跌兩個月的科技成長股跌勢會暫時停止，可進場抄底搶反彈",
            },
            "type": "inline-value",
          },
        ],
        "length": 35,
        "linenumber": 3,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 4,
            "marker": Object {
              "key": "[-]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "全球量化寬鬆已開始縮減",
            ],
            "length": 11,
            "linenumber": 5,
            "marker": Object {
              "key": "[-]",
              "value": "全球量化寬鬆已開始縮減",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "通脹開始上升",
            ],
            "length": 6,
            "linenumber": 6,
            "marker": Object {
              "key": "[-]",
              "value": "通脹開始上升",
            },
            "type": "line-value",
          },
        ],
        "length": 22,
        "linenumber": 4,
        "type": "multiline-marker",
      },
    ],
    "ticker": true,
  },
]
`;

exports[`Parser tokenizeSection() 6`] = `
Array [
  Object {
    "stream": Array [],
  },
  Object {
    "nestedCard": Object {
      "symbol": "[[中概股]]",
    },
    "stream": Array [
      Object {
        "alias": "sect-topic",
        "content": Array [
          Object {
            "content": "[[中概股]]",
            "length": 7,
            "linenumber": 0,
            "type": "sect-symbol",
          },
          "
",
        ],
        "length": 8,
        "linenumber": 0,
        "type": "sect-topic-begin-line",
      },
      Object {
        "content": Array [
          Object {
            "content": "[近期]",
            "length": 4,
            "linenumber": 1,
            "marker": Object {
              "key": "[近期]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "距離二月份高點跌幅20%",
            ],
            "length": 12,
            "linenumber": 2,
            "marker": Object {
              "key": "[近期]",
              "value": "距離二月份高點跌幅20%",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              Object {
                "content": "[[Archegos爆倉事件]]",
                "length": 16,
                "linenumber": 3,
                "type": "topic",
              },
              "，",
              Object {
                "content": "$GSX",
                "length": 4,
                "linenumber": 3,
                "type": "ticker",
              },
              " (跟誰學 )、",
              Object {
                "content": "$VIPS",
                "length": 5,
                "linenumber": 3,
                "type": "ticker",
              },
              " (唯品會)、",
              Object {
                "content": "$IQ",
                "length": 3,
                "linenumber": 3,
                "type": "ticker",
              },
              " (愛奇藝)、",
              Object {
                "content": "$BIDU",
                "length": 5,
                "linenumber": 3,
                "type": "ticker",
              },
              "、",
              Object {
                "content": "$TCEHY",
                "length": 6,
                "linenumber": 3,
                "type": "ticker",
              },
              "遭大量拋售",
            ],
            "length": 68,
            "linenumber": 3,
            "marker": Object {
              "key": "[近期]",
              "value": "[[Archegos爆倉事件]]，$GSX (跟誰學 )、$VIPS (唯品會)、$IQ (愛奇藝)、$BIDU、$TCEHY遭大量拋售",
            },
            "type": "line-value",
          },
        ],
        "length": 86,
        "linenumber": 1,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 4,
            "marker": Object {
              "key": "[+]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "習慣性被低估",
            ],
            "length": 6,
            "linenumber": 5,
            "marker": Object {
              "key": "[+]",
              "value": "習慣性被低估",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "中國經濟好，市場規模持續擴大，有發展空間",
            ],
            "length": 20,
            "linenumber": 6,
            "marker": Object {
              "key": "[+]",
              "value": "中國經濟好，市場規模持續擴大，有發展空間",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "市盈率低，來到一年來的低點19",
            ],
            "length": 15,
            "linenumber": 7,
            "marker": Object {
              "key": "[+]",
              "value": "市盈率低，來到一年來的低點19",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "大摩對2021年中國經濟增速預期為8.7%",
            ],
            "length": 21,
            "linenumber": 8,
            "marker": Object {
              "key": "[+]",
              "value": "大摩對2021年中國經濟增速預期為8.7%",
            },
            "type": "line-value",
          },
        ],
        "length": 69,
        "linenumber": 4,
        "type": "multiline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 9,
            "marker": Object {
              "key": "[-]",
            },
            "type": "line-mark",
          },
          "
",
          Object {
            "content": Array [
              "財務造假新聞：",
              Object {
                "content": "$LKNCY",
                "length": 6,
                "linenumber": 10,
                "type": "ticker",
              },
              "、",
              Object {
                "content": "$IQ",
                "length": 3,
                "linenumber": 10,
                "type": "ticker",
              },
            ],
            "length": 17,
            "linenumber": 10,
            "marker": Object {
              "key": "[-]",
              "value": "財務造假新聞：$LKNCY、$IQ",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "中美關係緊張",
            ],
            "length": 6,
            "linenumber": 11,
            "marker": Object {
              "key": "[-]",
              "value": "中美關係緊張",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "仍會受美國環境影響",
            ],
            "length": 9,
            "linenumber": 12,
            "marker": Object {
              "key": "[-]",
              "value": "仍會受美國環境影響",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "風險無法估計",
            ],
            "length": 6,
            "linenumber": 13,
            "marker": Object {
              "key": "[-]",
              "value": "風險無法估計",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "美國提出",
              Object {
                "content": "[[外國公司問責法案]]",
                "length": 12,
                "linenumber": 14,
                "type": "topic",
              },
              "，中概股因涉及國家安全，無法接受審計，故將面臨退市的風險",
            ],
            "length": 44,
            "linenumber": 14,
            "marker": Object {
              "key": "[-]",
              "value": "美國提出[[外國公司問責法案]]，中概股因涉及國家安全，無法接受審計，故將面臨退市的風險",
            },
            "type": "line-value",
          },
          "
",
          Object {
            "content": Array [
              "中國監管政策、法規風險，變化大，無法量化",
            ],
            "length": 20,
            "linenumber": 15,
            "marker": Object {
              "key": "[-]",
              "value": "中國監管政策、法規風險，變化大，無法量化",
            },
            "type": "line-value",
          },
        ],
        "length": 111,
        "linenumber": 9,
        "type": "multiline-marker",
      },
    ],
    "topic": true,
  },
]
`;
